Tasker.UI/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    vendor: dorshaar
  name: tasker-ui
  namespace: default
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: tasker-ui
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer:
    ingress:
    - hostname: localhost
